--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ rustls-tls = ["reqwest/rustls-tls"]
 
 [dependencies]
 anyhow = "1.0"
+cached = "0.25.0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
 tokio = { version  = "1.0", features = ["macros", "fs"] }
 oci-distribution = { git = "https://github.com/krustlet/krustlet" }
