--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ rustls-tls = ["reqwest/rustls-tls"]
 anyhow = "1.0"
 cached = "0.25.0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
+serde = {version = "1.0", features = ["derive"]}
+serde_yaml = {version = "0.8.21"}
 tokio = { version  = "1.0", features = ["macros", "fs"] }
 oci-distribution = { git = "https://github.com/krustlet/krustlet" }
 
