retrieve secrets from environment variables
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/transformations.yaml
+++ b/transformations.yaml
@@ -1,13 +1,12 @@
 transformations:
   - name: first_transformation
     wasm_image: ghcr.io/the-mesh-for-data/krustlet-tutorial:v1.0.0
+    credentials_variable: CREDENTIALS
     configuration:  |
       {
         "columns": ["name", "age", "address"]
       }
   - name: second_transformation
-    username: the-mesh-for-data
-    password: XXX
     wasm_image: ghcr.io/the-mesh-for-data/wasm1:v1
   - name: third_transformation
     wasm_image: ghcr.io/the-mesh-for-data/krustlet-tutorial:v1.0.0
