--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ cached = "0.25.0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
 serde = {version = "1.0", features = ["derive"]}
 serde_yaml = {version = "0.8.21"}
+serde_json = {version = "1.0"}
 tokio = { version  = "1.0", features = ["macros", "fs"] }
 oci-distribution = { git = "https://github.com/krustlet/krustlet" }
 
